# aws-practice

./: README.md  main.tf
code-pipeline/copy-ecr-image/: pyproject.toml
code-pipeline/copy-ecr-image/cdk/: app.py
code-pipeline/copy_ecr_image/: pyproject.toml
code-pipeline/copy_ecr_image/start_code_build/: handler.py
dva/ec2_basic/: ami.tf  ec2_instance.tf  security_group.tf
saa/: main.tf  output.tf  variables.tf
saa/common/ec2_config/: output.tf
saa/ec2_basic/: ec2_instance.tf  output.tf
section_5_6/: ami.tf  ec2_instance.tf  security_group.tf  user_data.sh
